# project-2

./: .gitignore  README.md  main.py  model.py  pyproject.toml  test.py
scripts/: best.sh  grid.py  grid.sh  inference.sh  test-grid.py
src/project_2/: cli.py  dataset.py  model.py  tokenizer.py  trainer.py
