[project]
name = "project-2"
version = "0.1.0"
description = "Brandeis CS231 PA2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.3.0",
  "matplotlib>=3.10.7",
  "nltk>=3.9.2",
  "numpy>=2.3.3",
  "pyqt6>=6.10.0",
  "torch~=2.6.0 ; platform_machine != 'x86_64' or sys_platform != 'darwin'",
  "tqdm>=4.67.1",
]

[project.scripts]
project-2 = "project_2:cli"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
